2000-08-19  Christopher James Lahey  <clahey@helixcode.com>

	* conduit/address-conduit.c, conduit/address-conduit.h: Changed
	this to use ECardSimple.

	* contact-editor/e-contact-editor.c: Fixed a memory leak.

	* gui/component/addressbook.c: Added stuff to the right click
	menu.  Activated the new search dialog that doesn't quite work
	yet.

	* gui/minicard/e-minicard-view.c: Fixed some run time warnings.

2000-08-15  Larry Ewing  <lewing@helixcode.com>

	* gui/minicard/e-minicard.c (e_minicard_event): use style colors
	for the selected state.  This doesn't properly redraw the minicard
	when there is a style_change event, that is next.
	(e_minicard_realize): use style colors.

2000-08-14  Peter Williams  <peterw@helixcode.com>

	* backend/pas/pas-backend-file.c: Include the proper db1/db.h
	as in RedHat 7.0 -- patch from Kenny Graunke <kwg@teleport.com>

2000-08-13  Chris Toshok  <toshok@helixcode.com>

	* conduit/Makefile.am (libaddress_conduit_la_SOURCES): add
	address-conduit.h

	* Makefile.am (CONDUIT_SUBDIR): only set subdir if
	ENABLE_PILOT_CONDUITS is set.

2000-08-13  Chris Toshok  <toshok@helixcode.com>

	* Makefile.am (SUBDIRS): add conduit subdir.

2000-08-13  Chris Toshok  <toshok@helixcode.com>

	* conduit/address-conduit.c (conduit_get_gpilot_conduit): add
	special oaf initialization hack so conduit can find wombat, and
	accept all cookies so that we can actually talk to oaf.

2000-08-13  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-backend-file.c: Fixed a typo that cause the
	wrong field to be searched.

	* gui/component/select-names/e-select-names.c: Made the select
	names dialog only display entries with email addresses.

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/contact-editor.glade: Fixed a typo in the name of
	the first phone entry.

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* gui/search/Makefile.am,
	gui/search/e-addressbook-search-dialog.c,