@@ -1,3 +1,8 @@
+2000-08-22  Christopher James Lahey  <clahey@helixcode.com>
+
+	* gui/component/addressbook.c: Linked in the search dialog again.
+	It looks like some changes in the shell made this not work.
+
 2000-08-19  Christopher James Lahey  <clahey@helixcode.com>
 
 	* conduit/address-conduit.c, conduit/address-conduit.h: Changed
